# functionalities

./: .gitignore
faceR/: .env  db_connect.py  index.py  main.py
nearbyhospitals/: README.md  pyproject.toml  report.md
nearbyhospitals/src/nearbyhospitals/: crew.py  main.py
nearbyhospitals/src/nearbyhospitals/config/: agents.yaml  tasks.yaml
nearbyhospitals/src/nearbyhospitals/tools/: custom_tool.py
