[project]
name = "nearbyhospitals"
version = "0.1.0"
description = "NearbyHospitals using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
nearbyhospitals = "nearbyhospitals.main:run"
run_crew = "nearbyhospitals.main:run"
train = "nearbyhospitals.main:train"
replay = "nearbyhospitals.main:replay"
test = "nearbyhospitals.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
